--- a/css/styles.css
+++ b/css/styles.css
@@ -278,3 +278,17 @@ header {
     max-width: 100%;
     float: right;
 }
+
+.home-image {
+    background-image: url(../img/AboutUs.jpg);
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+
+/* 
+@media screen and (min-width: 45em) {
+    
+} */
