--- a/css/styles.css
+++ b/css/styles.css
@@ -276,10 +276,25 @@ header {
     float: right;
 }
 
-.home-image {
+
+/* .home-image {
     background-image: url(../img/AboutUs.jpg);
     height: 100%;
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
+} */
+
+#home {
+    background-image: url(../img/AboutUs.jpg);
+    background-size: cover;
+    min-height: 100% !important;
+    position: relative;
+    background-position: center;
+}
+
+#Become-Member {
+    background-image: url(../img/AboutUs.jpg);
+    background-size: cover;
+    background-position: center;
 }
