--- a/css/styles.css
+++ b/css/styles.css
@@ -296,5 +296,5 @@ header {
 #Become-Member {
     background-image: url(../img/AboutUs.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: right;
 }
