--- a/css/styles.css
+++ b/css/styles.css
@@ -297,5 +297,5 @@ header {
     font-size: 24px;
     position: absolute;
     bottom: 0;
-    font-family: 'proxima-nova', sans-serif;
+    font-family: 'proxima-nova';
 }
