--- a/css/styles.css
+++ b/css/styles.css
@@ -88,6 +88,17 @@ section {
     background: #000000;
 }
 
+@media screen and (min-width: 1025px) and (max-width: 1500px) {
+    section {
+        border-bottom: 1px solid #999;
+        text-align: center;
+        padding: 100px 0 0;
+        height: 800px;
+        width: 100%;
+        background: #000000;
+    }
+}
+
 h1 {
     margin-bottom: .5em;
 }
@@ -270,21 +281,14 @@ header {
 }
 
 .playermade {
-    height: 20% !important;
+    height: 18% !important;
     max-height: 100% !important;
     width: auto;
     max-width: 100%;
-    float: right;
+    position: absolute;
+    right: 0;
+    top: 55px;
 }
-
-
-/* .home-image {
-    background-image: url(../img/AboutUs.jpg);
-    height: 100%;
-    background-position: right;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
 
 #home {
     background-image: url(../img/AboutUs.jpg);
