--- a/css/styles.css
+++ b/css/styles.css
@@ -298,8 +298,11 @@ header {
 
 .texty {
     color: white;
-    font-size: 24px;
     position: absolute;
-    bottom: 0;
+    top: 75%;
     font-family: 'proxima-nova';
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: 400;
+    max-width: 350px
 }
