changed top to bottom

--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ header {
         color: white;
         margin: 45px;
         position: absolute;
-        top: 70%;
+        bottom: 0%;
         font-family: "ProximaBlack", Times, serif;
         font-size: 1.25rem;
         font-weight: 300;
