--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ header {
         color: white;
         margin: 45px;
         position: absolute;
-        bottom: 0%;
+        top: 70%;
         font-family: "ProximaBlack", Times, serif;
         font-size: 1.25rem;
         font-weight: 300;
