--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ header {
     top: 55px;
 }
 
-@media screen and (max-width: 45em) {
+@media screen and (max-width: 1019px) {
     .text {
         color: white;
         margin: 27px;
