--- a/css/styles.css
+++ b/css/styles.css
@@ -301,12 +301,6 @@ header {
     }
 }
 
-#home {
-    background-image: url(../img/About.jpg);
-    background-size: cover;
-    background-position: right;
-}
-
 .layout {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -323,8 +317,38 @@ header {
     align-items: center;
 }
 
+#home {
+    background-image: url(../img/About.jpg);
+    background-size: cover;
+    background-position: right;
+}
+
 #Become-Member {
     background-image: url(../img/test2.jpg);
     background-size: cover;
     background-position: left;
+}
+
+#Movement-Screen {
+    background-image: url(../img/test3.jpg);
+    background-size: cover;
+    background-position: right;
+}
+
+#Specialist-Training {
+    background-image: url(../img/test4.jpg);
+    background-size: cover;
+    background-position: left;
+}
+
+#Abstract {
+    background-image: url(../img/test5.jpg);
+    background-size: cover;
+    background-position: left;
+}
+
+#Contact {
+    background-image: url(../img/test6.jpg);
+    background-size: cover;
+    background-position: center;
 }
