--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body {
     border: 0;
 }
 
+#content[tabindex="-1"] {
+    outline: none;
+}
+
 a:active,
 a:hover {
     outline: 0;
@@ -293,7 +297,7 @@ header {
         margin: 27px;
         position: absolute;
         top: 75%;
-        font-family: "ProximaBlack", Times, serif;
+        font-family: Graphik Web, Helvetica Neue, Helvetica, Arial, Verdana, sans-serif;
         font-size: 1.25rem;
         font-weight: 300;
         letter-spacing: 0;
@@ -314,7 +318,21 @@ header {
 .content {
     margin-left: auto;
     margin-right: auto;
+}
+
+.flex {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flex--middle {
     align-items: center;
+}
+
+.flex>.cell {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 #home {
