--- a/css/styles.css
+++ b/css/styles.css
@@ -295,8 +295,6 @@ header {
     .text {
         color: white;
         margin: 27px;
-        position: absolute;
-        top: 75%;
         font-family: Graphik Web, Helvetica Neue, Helvetica, Arial, Verdana, sans-serif;
         font-size: 1.25rem;
         font-weight: 300;
@@ -333,6 +331,8 @@ header {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
+    position: absolute;
+    bottom: 5%;
 }
 
 #home {
