--- a/css/styles.css
+++ b/css/styles.css
@@ -310,7 +310,10 @@ header {
     margin-right: auto;
     max-width: 100em;
     padding-right: 1.875rem;
+    padding-left: 1.875rem;
     width: 100%;
+    position: absolute;
+    bottom: 5%;
 }
 
 .content {
@@ -331,8 +334,6 @@ header {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
-    position: absolute;
-    bottom: 5%;
 }
 
 #home {
