--- a/css/styles.css
+++ b/css/styles.css
@@ -313,7 +313,7 @@ header {
     padding-left: 1.875rem;
     width: 100%;
     position: absolute;
-    bottom: 1%;
+    bottom: 0;
 }
 
 .content {
