--- a/css/styles.css
+++ b/css/styles.css
@@ -83,18 +83,18 @@ body {
     font: normal 100%/1.4 sans-serif;
 }
 
-@media screen and (max-width: 1019px) {
+@media screen and (max-width: 700px) {
     section {
         border-bottom: 1px solid #999;
         text-align: center;
         padding: 100px 0 0;
-        height: 650px;
+        height: 630px;
         width: 100%;
         background: #000000;
     }
 }
 
-@media screen and (min-width: 1020px) and (max-width: 1500px) {
+@media screen and (min-width: 701px) and (max-width: 1500px) {
     section {
         border-bottom: 1px solid #999;
         text-align: center;
@@ -296,44 +296,104 @@ header {
         color: white;
         margin: 27px;
         font-family: Graphik Web, Helvetica Neue, Helvetica, Arial, Verdana, sans-serif;
-        font-size: 1.25rem;
+        font-size: 24px;
         font-weight: 300;
         letter-spacing: 0;
         line-height: 1.4;
+        position: absolute;
+        bottom: 7%;
     }
 }
 
-.layout {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100em;
-    padding-right: 1.875rem;
-    padding-left: 1.875rem;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
+@media screen and (min-width: 701px) and (max-width: 1500px) {
+    .card {
+        display: grid;
+        grid-template-columns: 450px;
+        grid-template-rows: 250px 450px 80px;
+        grid-template-areas: "image" "text";
+        border-radius: 18px;
+        background: white;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+        font-family: roboto;
+        text-align: center;
+        position: absolute;
+        left: 40px;
+        margin-top: -50px;
+    }
+    .card-text p {
+        color: grey;
+        font-size: 19px;
+        font-weight: 300;
+    }
+    .card-text h2 {
+        margin-top: 0px;
+        font-size: 28px;
+    }
 }
 
-.content {
-    margin-left: auto;
-    margin-right: auto;
+@media screen and (max-width: 700px) {
+    .card {
+        display: grid;
+        grid-template-columns: 250px;
+        grid-template-rows: 150px 330px 50px;
+        grid-template-areas: "image" "text";
+        border-radius: 18px;
+        background: white;
+        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+        font-family: roboto;
+        text-align: center;
+        position: absolute;
+        left: 10px;
+        margin-top: -50px;
+    }
+    .card-text p {
+        color: grey;
+        font-size: 12px;
+        font-weight: 300;
+    }
+    .card-text h2 {
+        margin-top: 0px;
+        font-size: 20px;
+    }
 }
 
-.flex {
-    display: flex;
-    flex-wrap: wrap;
+.card-image {
+    grid-area: image;
+    background: url(https://www.playermade.co.uk/img/invest.jpg);
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background-size: cover;
 }
 
-.flex--middle {
-    align-items: center;
+.card-text {
+    grid-area: text;
+    margin: 25px;
 }
 
-.flex>.cell {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 100%;
+.btn-success {
+    color: #fff;
+    background-color: #5cb85c;
+    border-color: #4cae4c;
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: 400;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    border-radius: 4px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #home {
@@ -351,7 +411,7 @@ header {
 #Movement-Screen {
     background-image: url(../img/test3.jpg);
     background-size: cover;
-    background-position: right;
+    background-position: center;
 }
 
 #Specialist-Training {
