--- a/css/styles.css
+++ b/css/styles.css
@@ -306,17 +306,9 @@ header {
 
 @media screen and (min-width: 701px) and (max-width: 1500px) {
     .card {
-        display: grid;
-        grid-template-columns: 450px;
-        grid-template-rows: 250px 450px 80px;
-        grid-template-areas: "image" "text";
-        border-radius: 18px;
-        background: white;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
-        font-family: roboto;
         text-align: center;
         position: absolute;
-        left: 40px;
+        left: 10px;
         margin-top: -50px;
     }
     .card-text p {
@@ -332,27 +324,20 @@ header {
 
 @media screen and (max-width: 700px) {
     .card {
-        display: grid;
-        grid-template-columns: 250px;
-        grid-template-rows: 150px 350px 50px;
-        grid-template-areas: "image" "text";
-        border-radius: 18px;
-        background: white;
-        box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
-        font-family: roboto;
         text-align: center;
         position: absolute;
-        left: 10px;
-        margin-top: -50px;
+        left: 65px;
+        margin-top: -70px;
     }
     .card-text p {
-        color: grey;
-        font-size: 12px;
+        color: #fff;
+        font-size: 18px;
         font-weight: 300;
     }
     .card-text h2 {
         margin-top: 0px;
-        font-size: 20px;
+        font-size: 30px;
+        color: #fff;
     }
 }
 
@@ -371,12 +356,19 @@ header {
     font-size: 26px;
 }
 
-.card-image {
-    grid-area: image;
-    background: url(https://www.playermade.co.uk/img/invest.jpg);
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    background-size: cover;
+.Training-text p {
+    color: #fff;
+    font-size: 16px;
+    font-weight: 300;
+    margin: 50px;
+    margin-bottom: 30px;
+    margin-top: -20px;
+}
+
+.Training-text h2 {
+    color: #fff;
+    margin-top: 0px;
+    font-size: 20px;
 }
 
 .card-text {
@@ -425,7 +417,7 @@ header {
 #Movement-Screen {
     background-image: url(../img/test3.jpg);
     background-size: cover;
-    background-position: center;
+    background-position: right;
 }
 
 #Specialist-Training {
