--- a/css/styles.css
+++ b/css/styles.css
@@ -355,7 +355,7 @@ header {
 .border-box {
     border: 10px solid white;
     padding: 35px;
-    margin: 50px;
+    margin: 0 auto;
     width: 170px;
     height: 90px;
     margin-top: -46px;
