--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,11 @@ header {
     height: 90px;
 }
 
+.vl {
+border-left: 10px solid white;
+  height: 500px;
+}
+
 .Training-text p {
     color: white;
     font-size: 16px;
