--- a/css/styles.css
+++ b/css/styles.css
@@ -277,27 +277,6 @@ header {
     color: black;
 }
 
-.playermade {
-    height: 18% !important;
-    max-height: 100% !important;
-    width: auto;
-    max-width: 100%;
-    position: absolute;
-    right: 0;
-    top: 55px;
-}
-
-@media screen and (max-width: 700px) {
-    .text-content p {
-        color: white;
-        font-family: Graphik Web, Helvetica Neue, Helvetica, Arial, Verdana, sans-serif;
-        font-size: 24px;
-        font-weight: 300;
-        letter-spacing: 0;
-        line-height: 1.4;
-        margin-top: 450px;
-    }
-}
 
 @media screen and (min-width: 701px) and (max-width: 1500px) {
     .card {
@@ -320,8 +299,6 @@ header {
 @media screen and (max-width: 700px) {
     .card {
         text-align: center;
-        position: absolute;
-        left: 65px;
         margin-top: -70px;
     }
     .card-text p {
@@ -412,38 +389,27 @@ header {
     user-select: none;
 }
 
-#home {
-    background-image: url(../img/About.jpg);
-    background-size: cover;
-    background-position: right;
+.img-responsive {
+    display: block;
+    max-width: 100%;
+    height: 57%;
+    margin-top: -43px;
 }
 
-#Become-Member {
-    background-image: url(../img/test2.jpg);
-    background-size: cover;
-    background-position: left;
+img {
+    vertical-align: middle;
+    border: 0;
 }
 
-#Movement-Screen {
-    background-image: url(../img/test3.jpg);
-    background-size: cover;
-    background-position: right;
+.blackbox {
+    text-align: center;
+    max-width: 460px;
+    margin: 20px;
+    margin-top: -230px;
+
 }
 
-#Specialist-Training {
-    background-image: url(../img/test4.jpg);
-    background-size: cover;
-    background-position: left;
-}
-
-#Abstract {
-    background-image: url(../img/test5.jpg);
-    background-size: cover;
-    background-position: left;
-}
-
-#Contact {
-    background-image: url(../img/test6.jpg);
-    background-size: cover;
-    background-position: center;
+.blackbox p {
+    color: white;
+    font-size: 20px;
 }
