--- a/css/styles.css
+++ b/css/styles.css
@@ -392,8 +392,17 @@ header {
 .img-responsive {
     display: block;
     max-width: 100%;
-    height: 57%;
-    margin-top: -43px;
+    height: 50%;
+    margin-top: 0px;
+}
+
+.img-responsive2 {
+    display: block;
+    max-width: 100%;
+    width: 100%;
+    height: 70%;
+    margin-top: -99px;
+    border-top: 1px solid #999;
 }
 
 img {
