--- a/css/styles.css
+++ b/css/styles.css
@@ -422,3 +422,37 @@ img {
     color: white;
     font-size: 20px;
 }
+
+.screenbox {
+    text-align: center;
+    max-width: 460px;
+    margin: 0px;
+    margin-top: -430px;
+
+}
+.screenbox p {
+    color: white;
+    font-size: 15px;
+}
+
+.screenbox h2 {
+    color: white;
+    font-size: 22px;
+}
+
+.screenbox2 {
+    text-align: center;
+    max-width: 460px;
+    margin: 0px;
+    margin-top: -430px;
+}
+
+.screenbox2 p {
+    color: white;
+    font-size: 13px;
+}
+
+.screenbox2 h2 {
+    color: white;
+    font-size: 22px;
+}
