--- a/css/styles.css
+++ b/css/styles.css
@@ -392,7 +392,7 @@ header {
 .img-responsive {
     display: block;
     max-width: 100%;
-    height: 50%;
+    height: 60%;
     margin-top: 0px;
 }
 
@@ -403,6 +403,16 @@ header {
     height: 70%;
     margin-top: -99px;
     border-top: 1px solid #999;
+}
+
+.playermade {
+    width: 65%;
+}
+
+@media screen and (min-width: 700px) {
+    .playermade {
+        width: 10%;
+    }
 }
 
 img {
