move logo centrally

--- a/css/styles.css
+++ b/css/styles.css
@@ -407,6 +407,8 @@ header {
 
 .playermade {
     width: 65%;
+    margin-bottom: 22px;
+    margin-top: -25px;
 }
 
 @media screen and (min-width: 700px) {
