--- a/css/styles.css
+++ b/css/styles.css
@@ -449,7 +449,7 @@ img {
     text-align: center;
     max-width: 460px;
     margin: 0px;
-    margin-top: -430px;
+    margin-top: 50px;
 }
 
 .screenbox2 p {
@@ -467,4 +467,8 @@ img {
     background-size: cover;
 }
 
+#Specialist-Training { 
+    background-image: url(../img/black.jpg); 
+    background-size: cover;
+}
 
