--- a/css/styles.css
+++ b/css/styles.css
@@ -315,9 +315,9 @@ header {
 
 .Member-text p {
     color: white;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 300;
-    margin: 10px;
+    margin: -2px;
     margin-bottom: 20px;
     margin-top: 1px;
 }
@@ -332,7 +332,7 @@ header {
     border: 10px solid white;
     padding: 35px;
     margin: -50px auto;
-    width: 210px;
+    width: 225px;
     height: 90px;
     margin-bottom: 75px;
 }
@@ -340,7 +340,13 @@ header {
 .vl {
     border-left: 10px solid white;
     height: 30px;
-    margin: -10px 0px 0px 100px;
+    margin: -5px 0px 0px 110px;
+}
+
+.vl2 {
+    border-left: 10px solid white;
+    height: 30px;
+    margin: 50px 0px 0px 110px;
 }
 
 .Training-text p {
@@ -399,9 +405,9 @@ header {
 }
 
 .playermade {
-    width: 65%;
+    width: 50%;
     margin-bottom: 22px;
-    margin-top: -25px;
+    margin-top: 50px;
 }
 
 @media screen and (min-width: 700px) {
@@ -418,32 +424,63 @@ img {
 .blackbox {
     text-align: center;
     max-width: 460px;
-    margin: 20px;
+    margin: 15px;
     margin-top: 100px;
 
 }
 
 .blackbox p {
     color: white;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .screenbox {
+    text-align: center;
+    max-width: 460px;
+    margin: 20px;
+    margin-top: -410px;
+
+}
+.screenbox p {
+    color: white;
+    font-size: 22px;
+}
+
+.screenbox h2 {
+    color: white;
+    font-size: 30px;
+}
+
+.screenbox3 {
     text-align: center;
     max-width: 460px;
     margin: 0px;
     margin-top: -410px;
 
 }
-.screenbox p {
+.screenbox3 p {
     color: white;
     font-size: 11px;
 }
 
-.screenbox h2 {
+.screenbox4 {
+    text-align: center;
+    max-width: 460px;
+    margin: 0px;
+    margin-top: -410px;
+
+}
+
+.screenbox4 h2 {
+    color: white;
+    font-size: 30px;
+}
+
+.screenbox4 p {
     color: white;
     font-size: 22px;
 }
+
 
 .screenbox2 {
     text-align: center;
