--- a/css/styles.css
+++ b/css/styles.css
@@ -571,6 +571,31 @@ q {font-style: italic;}
   
 .author {color: cornflowerblue;}
 
+.contact-text {
+    text-align: center;
+    max-width: 460px;
+    margin: 0px;
+    margin-top: 30px;
+    color: black;
+    font-size: 16px;
+}
+.social {
+    margin-top: -100px;
+}
+
+.social-title {
+    text-align: center;
+    margin-bottom: 20px;
+    color: black;
+}
+
+.social-row {
+    margin: 5px;
+    display: inline-block;
+    text-align: center;
+    float: none;
+}
+
 #Become-Member { 
     background-image: url(../img/black.jpg); 
     background-size: cover;
@@ -584,4 +609,8 @@ q {font-style: italic;}
 #Abstract { 
     background-image: url(../img/black.jpg); 
     background-size: cover;
+}
+
+#Contact {
+    background: white;
 }
