--- a/css/styles.css
+++ b/css/styles.css
@@ -455,12 +455,16 @@ img {
     text-align: center;
     max-width: 460px;
     margin: 0px;
-    margin-top: 1px;
+    margin-top: -10px;
 
 }
 .screenbox3 p {
     color: white;
     font-size: 14px;
+}
+
+.screenbox3 h1 {
+    color: white;
 }
 
 .screenbox4 {
