--- a/css/styles.css
+++ b/css/styles.css
@@ -455,7 +455,7 @@ img {
     text-align: center;
     max-width: 460px;
     margin: 0px;
-    margin-top: -60px;
+    margin-top: -90px;
 
 }
 .screenbox3 p {
@@ -594,7 +594,7 @@ q {font-style: italic;}
 }
 
 .social-row {
-    margin: 5px;
+    margin: 5px 0 0 105px;
     display: inline-block;
     text-align: center;
     float: none;
