--- a/css/styles.css
+++ b/css/styles.css
@@ -261,8 +261,8 @@ header {
 	border: 10px solid white;
 	padding: 35px;
 	margin: -50px auto;
-	width: 225px;
-	height: 90px;
+	width: 235px;
+    	height: 95px
 	margin-bottom: 75px;
 }
 .vl {
