--- a/css/styles.css
+++ b/css/styles.css
@@ -262,7 +262,7 @@ header {
 	padding: 35px;
 	margin: -50px auto;
 	width: 235px;
-    	height: 95px
+    	height: 95px;
 	margin-bottom: 75px;
 }
 .vl {
