--- a/css/styles.css
+++ b/css/styles.css
@@ -426,11 +426,11 @@ img {
 	margin-top: 30px;
 }
 .screenbox2 p {
-	color: white;
+	color: black;
 	font-size: 13px;
 }
 .screenbox2 h2 {
-	color: white;
+	color: black;
 	font-size: 22px;
 }
 .video {
@@ -522,6 +522,10 @@ q {
 	background-image: url(../img/black.jpg);
 	background-size: cover;
 }
+#Movement-Screen {
+	background: white;
+}
+
 #Contact {
 	background: white;
 	height: 350px;
