--- a/css/styles.css
+++ b/css/styles.css
@@ -308,7 +308,7 @@ header {
 	border: 1px solid transparent;
 	white-space: nowrap;
 	padding: 6px 12px;
-	font-size: 14px;
+	font-size: 18px;
 	line-height: 1.42857143;
 	border-radius: 4px;
 	-webkit-user-select: none;
@@ -322,7 +322,7 @@ header {
 	width: 100%;
 	height: 65%;
 	margin-top: -99px;
-	border-top: 1px solid #999;
+	border-top: 1px solid black;
 }
 .playermade {
 	width: 60%;
