--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,12 @@ header {
 	margin-top: -30px;
 	font-size: 26px;
 }
+
+.Member-text2 h1 {
+	color: white;
+	margin-top: -30px;
+	font-size: 24px;
+}
 .border-box {
 	border: 10px solid white;
     	padding: 35px;
