--- a/css/styles.css
+++ b/css/styles.css
@@ -378,9 +378,12 @@ img {
 		margin: 25px;
 		margin-top: 100px;
 	}
+	.blackbox h1 {
+		color: yellow
+	}
 	.blackbox p {
 		color: white;
-		font-size: 22px;
+		font-size: 24px;
 		font-weight: bold;
 	}
 }
