--- a/css/styles.css
+++ b/css/styles.css
@@ -378,8 +378,8 @@ img {
 		margin: 25px;
 		margin-top: 100px;
 	}
-	.blackbox h1 {
-		color: yellow
+	.blackbox-text {
+		color: #f8e71c
 	}
 	.blackbox p {
 		color: white;
