--- a/css/styles.css
+++ b/css/styles.css
@@ -299,9 +299,8 @@ header {
 	margin: 25px;
 }
 .btn-success {
-	color: #fff;
-	background-color: #5cb85c;
-	border-color: #4cae4c;
+	color: #f8e71c;
+    	background-color: black;
 }
 .btn {
 	display: inline-block;
