--- a/css/styles.css
+++ b/css/styles.css
@@ -378,7 +378,7 @@ img {
 		font-weight: bold;
 	}
 	.blackbox-text2 {
-		color: white;
+		color: black;
 		font-size: 26px;
 		font-weight: bold;
 	}
