responsive color change

--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ img {
 		margin-top: 150px;
 	}
 	.blackbox p {
-		color: white;
+		color: black;
 		font-size: 40px;
                 font-weight: bold;
 	}
