--- a/css/styles.css
+++ b/css/styles.css
@@ -227,23 +227,6 @@ header {
 	text-align: center;
 	color: black;
 }
-@media screen and (min-width: 701px) and (max-width: 1500px) {
-	.card {
-		text-align: center;
-		position: absolute;
-		left: 10px;
-		margin-top: -50px;
-	}
-	.card-text p {
-		color: grey;
-		font-size: 19px;
-		font-weight: 300;
-	}
-	.card-text h2 {
-		margin-top: 0px;
-		font-size: 28px;
-	}
-}
 .Member-text p {
 	color: white;
 	font-size: 18px;
@@ -252,16 +235,15 @@ header {
 	margin-bottom: 20px;
 	margin-top: 1px;
 }
-.Member-text h1 {
-	color: #f8e71c;
-	margin-top: -30px;
-	font-size: 26px;
-}
-
 .Member-text2 h1 {
 	color: white;
 	margin-top: -30px;
 	font-size: 24px;
+}
+.Member-text h1 {
+	color: #f8e71c;
+	margin-top: -30px;
+	font-size: 26px;
 }
 .border-box {
 	border: 10px solid white;
@@ -288,10 +270,6 @@ header {
 	color: white;
 	margin-top: 0px;
 	font-size: 20px;
-}
-.card-text {
-	grid-area: text;
-	margin: 25px;
 }
 .btn-success {
 	color: #f8e71c;
@@ -320,7 +298,7 @@ header {
 	display: block;
 	max-width: 100%;
 	width: 100%;
-	height: 65%;
+	height: 50%;
 	margin-top: -99px;
 	border-top: 1px solid black;
 }
@@ -352,30 +330,11 @@ img {
 	}
 }
 @media screen and (max-width: 700px) {
-	.card {
-		text-align: center;
-		margin-top: -70px;
-	}
-	.card-text p {
-		color: #fff;
-		font-size: 18px;
-		font-weight: 300;
-	}
-	.card-text h2 {
-		margin-top: 0px;
-		font-size: 22px;
-		color: #fff;
-	}
 	.blackbox {
 		text-align: center;
 		max-width: 460px;
 		margin: 17px;
 		margin-top: 100px;
-	}
-	.blackbox-text {
-		color: #f8e71c;
-		font-size: 26px;
-		font-weight: bold;
 	}
 	.blackbox-text2 {
 		color: black;
@@ -385,8 +344,7 @@ img {
 }
 .screenbox {
 	text-align: center;
-	max-width: 460px;
-	margin: 20px;
+	margin: 10px;
 	margin-top: -10px;
 }
 .screenbox p {
@@ -397,23 +355,21 @@ img {
 	color: black;
 	font-size: 25px;
 }
-.screenbox3 {
+.Abstract-text {
 	text-align: center;
-	max-width: 460px;
 	margin: 0px;
 	margin-top: -115px;
 }
-.screenbox3 p {
+.Abstract-text p {
 	color: white;
 	font-size: 15px;
 	margin: 11px;
 }
-.screenbox3 h1 {
+.Abstract-text h1 {
 	color: white;
 }
 .screenbox4 {
 	text-align: center;
-	max-width: 460px;
 	margin: 0px;
 	margin-top: 60px;
 }
@@ -488,7 +444,7 @@ img {
 	display: inline-block;
 	transition: background-color 0.6s ease;
 }
-.active, .dot:hover {
+.dot:hover {
 	background-color: #717171;
 }
 q {
@@ -499,7 +455,6 @@ q {
 }
 .contact-text {
 	text-align: center;
-	max-width: 460px;
 	margin: 0px;
 	margin-top: -10px;
 	color: black;
@@ -519,6 +474,9 @@ q {
 	text-align: center;
 	float: none;
 }
+.maps {
+	margin-top: -9px;
+}
 #Become-Member {
 	background-image: url(../img/black.jpg);
 	background-size: cover;
@@ -535,7 +493,6 @@ q {
 	height: 250px;
 	background: black;
 }
-
 #Contact {
 	height: 350px;
 }
