--- a/css/styles.css
+++ b/css/styles.css
@@ -312,11 +312,11 @@ img {
 	border: 0;
 }
 @media screen and (min-width: 700px) {
-	.blackbox {
+	.Home {
 		margin: 150px;
 		margin-top: 150px;
 	}
-	.blackbox p {
+	.Home p {
 		color: black;
 		font-size: 40px;
                 font-weight: bold;
@@ -330,13 +330,13 @@ img {
 	}
 }
 @media screen and (max-width: 700px) {
-	.blackbox {
+	.Home {
 		text-align: center;
 		max-width: 460px;
 		margin: 17px;
 		margin-top: 100px;
 	}
-	.blackbox-text2 {
+	.Home-text {
 		color: black;
 		font-size: 26px;
 		font-weight: bold;
@@ -367,33 +367,6 @@ img {
 }
 .Abstract-text h1 {
 	color: white;
-}
-.screenbox4 {
-	text-align: center;
-	margin: 0px;
-	margin-top: 60px;
-}
-.screenbox4 h2 {
-	color: white;
-	font-size: 22px;
-}
-.screenbox4 p {
-	color: white;
-	font-size: 16px;
-}
-.screenbox2 {
-	text-align: center;
-	max-width: 460px;
-	margin: 0px;
-	margin-top: 30px;
-}
-.screenbox2 p {
-	color: white;
-	font-size: 13px;
-}
-.screenbox2 h2 {
-	color: white;
-	font-size: 22px;
 }
 .video {
 	Color: white;
