--- a/css/styles.css
+++ b/css/styles.css
@@ -258,6 +258,11 @@ header {
 	height: 35px;
 	margin: 35px 0px 0px 110px;
 }
+.vl1 {
+	border-left: 10px solid white;
+    height: 48px;
+    margin: 27px 0px 0px 110px;
+}
 .Training-text p {
 	color: white;
 	font-size: 16px;
