--- a/css/styles.css
+++ b/css/styles.css
@@ -450,6 +450,42 @@ q {
 .maps {
 	margin-top: -9px;
 }
+@media screen and (min-width: 1000px) {
+	.img-responsive2 {
+		display: block;
+    	max-width: 100%;
+    	width: 100%;
+    	height: 75%;
+    	margin-top: -99px;
+    	border-top: 1px solid black;
+	}
+	.screenbox p {
+		font-size: 22px;
+		margin: 10px
+	}
+	.btn {
+		font-size: 32px;
+	}
+	.Abstract-text h1 {
+		font-size: 33px;
+	}
+	.Abstract-text p {
+		font-size: 25px;
+    	margin: 35px;
+	}
+	q {
+		font-size: 26px;
+	}
+	.author {
+		font-size: 25px;
+	}
+	.contact-text {
+		font-size: 20px;
+	}
+	.playermade {
+		width: 20%;
+	}
+}
 #Become-Member {
 	background-image: url(../img/black.jpg);
 	background-size: cover;
