--- a/css/styles.css
+++ b/css/styles.css
@@ -321,14 +321,10 @@ img {
 		font-size: 40px;
                 font-weight: bold;
 	}
-	.playermade {
-		width: 10%;
-	}
 }
 @media screen and (max-width: 700px) {
 	.Home {
 		text-align: center;
-		max-width: 460px;
 		margin: 17px;
 		margin-top: 100px;
 	}
@@ -391,6 +387,11 @@ img {
 .line {
 	margin: -2px;
 }
+@media screen and (min-width: 600px) {
+	.playermade {
+		width: 10%;
+	}
+}
 @media screen and (min-width: 800px) {
 	.img-responsive {
 		display: block;
@@ -416,9 +417,6 @@ img {
 	}
 	.contact-text {
 		font-size: 20px;
-	}
-	.playermade {
-		width: 20%;
 	}
 	.vl {
 		border-left: 0px;
